--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "db": "rethinkdb --http-port 8081",
     "watch": "watchify src/js/main.js -o public/javascripts/main.js",
     "build": "browserify src/js/main.js -o public/javascripts/main.js",
-    "start": "concurrently \"npm run db\" \"nodemon bin/www\""
+    "start": "concurrently \"npm run db\" \"npm run serve\"",
+    "serve": "nodemon bin/www"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -15,8 +16,11 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "https": "^1.0.0",
     "jquery": "^3.1.1",
+    "mkdirp": "^0.5.1",
     "morgan": "~1.7.0",
+    "multer": "^1.2.1",
     "rethinkdb": "^2.3.3",
     "serve-favicon": "~2.3.0"
   },
