--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "~1.7.0",
     "multer": "^1.2.1",
     "rethinkdb": "^2.3.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
